# knowledgebase-local

./: .env.example  .gitignore  Architecture.md  Makefile  README.md  ROADMAP.md  pyproject.toml  requirements-dev.txt  requirements.txt
src/: config.py  llm_client.py
